--- a/jungel/index.html
+++ b/jungel/index.html
@@ -65,6 +65,7 @@ Bakgrunn.jpg,dagikkdesammentil.wav,[?7],forafeire.wav
 [7] Kiosken, Kiosken.jpg,kiosken.wav | Månen, Månen.jpg,manen.wav | Doen, Doen.jpg,doen.wav
 </script>
 
+
         <script type="application/javascript">
 
             /*
@@ -345,14 +346,14 @@ Bakgrunn.jpg,dagikkdesammentil.wav,[?7],forafeire.wav
                 var keyPattern = /(\d+)/g;
 
                 for(i in raw){
-                    var entry = raw[i].toUpperCase();
+                    var entry = raw[i];
                     if(pattern.test(entry)){
                         var key = entry.match(keyPattern)[0];
                         var alt = entry.replace(pattern,"").trim().split("|");
                         var wordList = [];
                         for(var i in alt){
                             var item = alt[i].split(",")
-                            wordList.push({word:item[0].trim(), image:item[1].trim(), sounds:item.slice(2) });
+                            wordList.push({word:item[0].trim().toUpperCase(), image:item[1].trim(), sounds:item.slice(2) });
                         }
 
                         dictionary["key_"+key] = wordList;
@@ -367,7 +368,6 @@ Bakgrunn.jpg,dagikkdesammentil.wav,[?7],forafeire.wav
             }
 
         </script>
-
 
 
 
