fixed spelling on file name

--- a/jungel/index.html
+++ b/jungel/index.html
@@ -57,7 +57,7 @@ Bakgrunn.jpg,dagikkdesammentil.wav,[?7],forafeire.wav
 
 -----------
 [1] Gul,Gul.jpg,guljungel.wav,gulejungelen.wav | Grønn, Grønn.jpg,gronnjungel.wav,gronnejungelen.wav | Turkis, Turkis.jpg,turkisjungel.wav,turkisejungelen.wav
-[2] Isbjørn, Isbjørn.jpg,isbjorn.wav,isbjornen.wav | Dinosaur, Dinosaur.jpg,dinosaur.wav,dinosausern.wav | Kakkerlakk, Kakkerlakk.jpg,kakkerlakk.wav,kakkerlakken.wav
+[2] Isbjørn, Isbjørn.jpg,isbjorn.wav,isbjornen.wav | Dinosaur, Dinosaur.jpg,dinosaur.wav,dinosauren.wav | Kakkerlakk, Kakkerlakk.jpg,kakkerlakk.wav,kakkerlakken.wav
 [3] Danset, Danset.jpg,danset.wav | Prompet, Prompet.jpg,prompet.wav | Spiste, Spiste.jpg,spiste.wav
 [4] I treet, I treet.jpg,itreet.wav | På bordet, På bordet.jpg,pabordet.wav | Ved vannet, vannet.jpg,vedvannet.wav
 [5] Sprekk, Sprekk.jpg,sprekk.wav | Tyggis, Tyggis.jpg,tyggis.wav | Vannpytt, Vannpytt.jpg,vannpytt.wav
