--- a/astronaut/index.html
+++ b/astronaut/index.html
@@ -4,16 +4,15 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
-        <link href='https://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.css">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+        <link rel="stylesheet" href="../css/bootstrap.css">
+        <link rel="stylesheet" href="../css/bootstrap-theme.css">
         <link rel="stylesheet" href="../css/main.css">
-        <script src="js/vendor/jquery-2.2.3.min.js"></script>
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="js/vendor/bootstrap.js"></script>
+        <script src="../js/vendor/jquery-2.2.3.min.js"></script>
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="../js/vendor/bootstrap.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -38,7 +37,7 @@ Astronauten som fikk motorstopp
 ingen
 
 Det var en gang en veldig [1] astronaut,
-ingen, detvarengangenveldig.wav,[?1], astronaut.wav
+ingen, Detvarengangenveldig.wav,[?1], astronaut.wav
 
 Det var fordi han var en [2].
 ingen, detvarfordihanvaren.wav, [?2]
