fixed selection bug

--- a/astronaut/index.html
+++ b/astronaut/index.html
@@ -45,7 +45,7 @@ ingen, detvarfordihanvaren.wav, [?2]
 En dag da astronauten var ute i verdensrommet i sin [3] rakett, stoppet motoren!
 ingen, endagda.wav, astronauten.wav, varuteiverdensrommetisin.wav, [?3], rakett.wav, stoppetmotoren.wav
 
-Astronauten ringte til sin venn [4] og sa: Du må hjelpe meg, den [?3] raketten min har fått motorstopp og jeg kan ikke reise hjem til jorda! [?4] svarte: Null problem.
+Astronauten ringte til sin venn [4] og sa: Du må hjelpe meg, den [?3] raketten min har fått motorstopp og jeg kan ikke reise hjem til jorda! .... svarte: Null problem.
 ingen, astronautenringtetilsinvenn.wav, [?4], ogsadumahjelpemegden.wav, [?3], rakettenminharfattmotorstoppogjegkanikkereisehjemtiljorda.wav, [?4], svartenullproblem.wav
 
 Litt senere så astronauten ut vinduet sitt og der var det en [5], det var vennen hans [?4] som kom for å hente ham.
