--- a/prinsesse/index.html
+++ b/prinsesse/index.html
@@ -37,32 +37,32 @@ Fortelling om prinsessen
 Bakgrunn.jpg
 
 Det var en gang en [1] prinsesse
-Bakgrunn.jpg,detvarengangen.wav,[?1],prinsesse.wav
+Bakgrunn.jpg,detvarengangen.wav,[1],prinsesse.wav
 
 Den [?1]e prinsessen bodde i et [2]
-Bakgrunn.jpg,den.wav,[?1],prinsessenboddeiet.wav,[?2]
+Bakgrunn.jpg,den.wav,[?1+1],prinsessenboddeiet.wav,[2]
 
 Inne i [?2]et hadde hun en veldig rar [3]
-Bakgrunn.jpg,innei.wav,[?2],haddehunenveldigrar.wav,[?3]
+Bakgrunn.jpg,innei.wav,[?2+2],haddehunenveldigrar.wav,[3]
 
 Den rare [?3]en var veldig [4]
-Bakgrunn.jpg,denrare.wav,[?3],varveldig.wav,[?4]
+Bakgrunn.jpg,denrare.wav,[?3+3],varveldig.wav,[4]
 
 Hun likte å [5] den rare [?4]e [?3]en hver dag
-Bakgrunn.jpg,hunlikteå.wav,[?5],denrare.wav,[?4],[?3],hverdag.wav
+Bakgrunn.jpg,hunlikteå.wav,[5],denrare.wav,[?4+4],[?3+3],hverdag.wav
 
 
 Derfor ble den [?1]e prinsessen veldig [6]
-Bakgrunn.jpg,derforbleiden.wav,[?1],prinsessenveldig.wav,[?6]
+Bakgrunn.jpg,derforbleiden.wav,[?1+1],prinsessenveldig.wav,[6]
 
 
 ----------
-[1] SØT,SOT.jpg,sot.wav | SUR, SUR.jpg, sur.wav | LANG, LANG.jpg, lang.wav
-[2] HUS, HUS.jpg, hus.wav | SLOTT, SLOTT.jpg, slott.wav | TELT, TELT.jpg, telt.wav
-[3] KANIN, KANIN.jpg, kanin.wav | MUFFINS, MUFFINS.jpg, muffins.wav | KJOLE, KJOLE.jpg, kjole.wav
-[4] MYK, MYK.jpg, myk.wav | FLEKKET, FLEKKET.jpg, flekkete.wav | SEIG, SEIG.jpg, seig.wav
-[5] KOSE(KOSE.jpg,kose.wav), SPISE(SPISE.jpg,spise.wav), LEKE MED(LEKE MED.jpg,lekemed.wav | KASTE, KASTE.jpg, kaste.wav
-[6] EKKEL, EKKEL.jpg, ekkel.wav | PROMPETE, PROMPETE.jpg, prompete.wav | GRØNN, GRONN.jpg, gronn.wav | KVALM, KVALM.jpg, kvalm.wav
+[1] SØT,SOT.jpg,sot.wav,sote.wav | SUR,SUR.jpg,sur.wav,sure.wav | LANG,LANG.jpg,lang.wav,lange.wav
+[2] HUS,HUS.jpg,hus.wav,huset.wav | SLOTT,SLOTT.jpg,slott.wav,slottet.wav | TELT,TELT.jpg,telt.wav,teltet.wav
+[3] KANIN,KANIN.jpg,kanin.wav,kaninen.wav | MUFFINS,MUFFINS.jpg,muffins.wav,muffinsen.wav | KJOLE,KJOLE.jpg,kjole.wav,kjolen.wav
+[4] MYK,MYK.jpg,myk.wav,myke.wav | FLEKKET,FLEKKET.jpg,flekkete.wav,flekkete.wav | SEIG,SEIG.jpg,seig.wav,seige.wav
+[5] KOSE,KOSE.jpg,kose.wav,SPISE,SPISE.jpg,spise.wav,LEKE MED,LEKE MED.jpg,lekemed.wav | KASTE,KASTE.jpg,kaste.wav
+[6] EKKEL,EKKEL.jpg,ekkel.wav | PROMPETE,PROMPETE.jpg,prompete.wav | GRØNN,GRONN.jpg,gronn.wav | KVALM,KVALM.jpg,kvalm.wav
 
 </script>
 
