--- a/prinsesse/index.html
+++ b/prinsesse/index.html
@@ -51,7 +51,6 @@ Bakgrunn.jpg,denrare.wav,[?3+2],varveldig.wav,[4]
 Hun likte å [5] den rare [?4]e [?3]en hver dag
 Bakgrunn.jpg,hunlikteå.wav,[5],denrare.wav,[?4+2],[?3+2],hverdag.wav
 
-
 Derfor ble den [?1]e prinsessen veldig [6]
 Bakgrunn.jpg,derforbleiden.wav,[?1+2],prinsessenveldig.wav,[6]
 
@@ -60,7 +59,7 @@ Bakgrunn.jpg,derforbleiden.wav,[?1+2],prinsessenveldig.wav,[6]
 [1] SØT,SOT.jpg,sot.wav,sote.wav | SUR,SUR.jpg,sur.wav,sure.wav | LANG,LANG.jpg,lang.wav,lange.wav
 [2] HUS,HUS.jpg,hus.wav,huset.wav | SLOTT,SLOTT.jpg,slott.wav,slottet.wav | TELT,TELT.jpg,telt.wav,teltet.wav
 [3] KANIN,KANIN.jpg,kanin.wav,kaninen.wav | MUFFINS,MUFFINS.jpg,muffins.wav,muffisen.wav | KJOLE,KJOLE.jpg,kjole.wav,kjolen.wav
-[4] MYK,MYK.jpg,myk.wav,myke.wav | FLEKKET,FLEKKET.jpg,flekkete.wav,flekkete.wav | SEIG,SEIG.jpg,seig.wav,seige.wav
+[4] MYK,MYKE.jpg,myk.wav,myke.wav | FLEKKET,FLEKKET.jpg,flekkete.wav,flekkete.wav | SEIG,SEIG.jpg,seig.wav,seige.wav
 [5] KOSE,KOSE.jpg,kose.wav,SPISE,SPISE.jpg,spise.wav,LEKE MED,LEKE MED.jpg,lekemed.wav | KASTE,KASTE.jpg,kaste.wav
 [6] EKKEL,EKKEL.jpg,ekkel.wav | PROMPETE,PROMPETE.jpg,prompete.wav | GRØNN,GRONN.jpg,gronn.wav | KVALM,KVALM.jpg,kvalm.wav
 
