--- a/prinsesse/index.html
+++ b/prinsesse/index.html
@@ -37,22 +37,22 @@ Fortelling om prinsessen
 Bakgrunn.jpg
 
 Det var en gang en [1] prinsesse
-Bakgrunn.jpg,detvarengangen.wav,[1],prinsesse.wav
+Bakgrunn.jpg,detvarengangen.wav,[?1],prinsesse.wav
 
 Den [?1]e prinsessen bodde i et [2]
-Bakgrunn.jpg,den.wav,[?1+2],prinsessenboddeiet.wav,[2]
+Bakgrunn.jpg,den.wav,[?1+2],prinsessenboddeiet.wav,[?2]
 
 Inne i [?2]et hadde hun en veldig rar [3]
-Bakgrunn.jpg,innei.wav,[?2+2],haddehunenveldigrar.wav,[3]
+Bakgrunn.jpg,innei.wav,[?2+2],haddehunenveldigrar.wav,[?3]
 
 Den rare [?3]en var veldig [4]
-Bakgrunn.jpg,denrare.wav,[?3+2],varveldig.wav,[4]
+Bakgrunn.jpg,denrare.wav,[?3+2],varveldig.wav,[?4]
 
 Hun likte å [5] den rare [?4]e [?3]en hver dag
-Bakgrunn.jpg,hunlikteå.wav,[5],denrare.wav,[?4+2],[?3+2],hverdag.wav
+Bakgrunn.jpg,hunlikteå.wav,[?5],denrare.wav,[?4+2],[?3+2],hverdag.wav
 
 Derfor ble den [?1]e prinsessen veldig [6]
-Bakgrunn.jpg,derforbleiden.wav,[?1+2],prinsessenveldig.wav,[6]
+Bakgrunn.jpg,derforbleiden.wav,[?1+2],prinsessenveldig.wav,[?6]
 
 
 ----------
