--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="js/vendor/bootstrap.js"></script>
 </head>
-<body>
+<body class="text-center flowerBackground " >
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<div class="contentContainer">
-    <div class="container-fluid">
+<div class="contentContainer text-center">
+    <div class="center-block">
         <div class="row">
             <a href="havet/index.html" class="btn btn-lg btn-warning col-sm-12">HAVET</a>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
-            <a href="jungel/index.html" class="btn btn-lg btn-warning col-sm-12">JUNGEL TRØBBELT</a>
+            <a href="jungel/index.html" class="btn btn-lg btn-warning col-sm-12">JUNGEL TRØBBEL</a>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row">
